@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.18 2011/06/06 16:20:32 manu Exp $
+$NetBSD: distinfo,v 1.19 2011/06/28 16:25:14 manu Exp $
 
-SHA1 (perfuse-20110601.tgz) = 8eaf02b36dae14d51c53b33a247cbf7406e49f71
-RMD160 (perfuse-20110601.tgz) = 6b422049764f14ddee03b578ff71bc95da5dce4d
-Size (perfuse-20110601.tgz) = 37545 bytes
+SHA1 (perfuse-20110628.tgz) = b6cc63b76ead0286d570657ee22bc06047c3abee
+RMD160 (perfuse-20110628.tgz) = 8e3984085af85a8fc46c68bfab78d2879272551d
+Size (perfuse-20110628.tgz) = 38760 bytes
 SHA1 (patch-aa) = 77e266476421fc041bbd2d2284ef586add1c35f2
